<resources>
    <string name="app_name">FoodRecommendation</string>
    <string name="str1">Go to take a photo</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_takephoto">Take Photo</string>
    <string name="result_page_back">Back</string>
    <string name="prompt_height">Height</string>
    <string name="prompt_weight">Weight</string>
    <string name="prompt_birthday">Birthday</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_start" translatable="false">Start</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="take_picture">Take picture</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="err_user_exist">User already exist</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_reenter_password">Confirm Password</string>
    <string name="submit_form">Submit</string>
    <string name="back">Back</string>
    <string name="skip">Later</string>
    <string name="user_profile">Edit Your Profile</string>
    <string name="take_photo">Take Photos</string>
    <string name="preference">Preference</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="birthday">Birthday</string>
    <string name="diet_opt">Diet</string>
    <string name="update">Update</string>
    <string name="prompt_allergies">Allergies (Separate by space)</string>
    <string name="action_update">Update</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_history">View Diet History</string>
    <string name="add_food">Add Another Food</string>
    <string name="get_recommendation">Finish</string>
    <string name="food_cate_notice">Current food category\n(You can edit it if it is wrong)</string>
    <string name="to_update_page">Go Update</string>
    <string name="show_alleges">Allergies</string>
    <string name="get_recomm">Get Recommendation</string>
    <string name="logout">Log Out</string>
</resources>
