<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bkglogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/settingbkg"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/prev_food"
        android:layout_width="265dp"
        android:layout_height="96dp"
        android:layout_marginBottom="276dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/settingbkg"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="107dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prev_food"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/add_food"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="68dp"
            android:background="@drawable/buttonbkg"
            android:text="@string/add_food"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/report"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="68dp"
            android:background="@drawable/buttonbkg"
            android:text="@string/get_recommendation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <!--
        <Button
            android:id="@+id/DiscoveryButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="76dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/buttonbkg"
            android:text="Loading..."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
-->
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="254dp"
        android:layout_height="106dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:background="@drawable/settingbkg"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prev_food">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="43dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/food_cate_notice" />

        <EditText
            android:id="@+id/tv_visual_rec"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>